--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mobx": "^3.2.2",
-    "mobx-react": "^4.2.2",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "mobx": "^4.1.1",
+    "mobx-react": "^5.0.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
@@ -32,6 +32,7 @@
     "enzyme": "^2.9.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^20.0.4",
+    "mobx-react-devtools": "^5.0.1",
     "react-test-renderer": "^15.6.1",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
